[package]
name = "rrocker-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5", features = ["tls"] }
prost = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
futures = "0.3"
tower = "0.4.8"

[build-dependencies]
tonic-build = "0.5"
