[package]
name = "rrockerd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.42" }
nix = "0.22.0"
tonic = { version = "0.5", features = ["tls"] }
prost = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
futures = "0.3"
tower = "0.4.8"
dashmap = "4.0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper = "0.14.11"
x509-parser = "0.10.0"
rrocker-lib = { path = "../rrocker-lib" }
serde = "1.0.127"
bincode = "1.3.3"
serde-error = "0.1.2"

[dev-dependencies]
sysinfo = "0.20.0"

[[bin]]
name = "rrockerd"
path = "src/main.rs"

[lib]
name = "rrockerd_lib"
path = "src/lib.rs"
